--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -8,6 +8,12 @@ workflows:
           XCODE_PROJECT: "xcell.xcodeproj" # <-- Put the name of your project here. 
           XCODE_SCHEME: "xcell" # <-- Put the name of your scheme here.
     scripts:
+      - name: Install npm dependencies
+        script: |
+          npm install
+      - name: Install CocoaPods dependencies
+        script: |
+          cd ios && pod install
       - name: Run tests
         script: |
           xcodebuild \
