Update build script

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -16,7 +16,7 @@ workflows:
           cd ios && pod install
       - name: Run tests
         script: |
-          xcodebuild \
+          cd ios && xcodebuild \
           -project "$XCODE_PROJECT" \
           -scheme "$XCODE_SCHEME" \
           -sdk iphonesimulator \
@@ -24,7 +24,7 @@ workflows:
           clean build test CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO          
       - name: Build debug app
         script: |
-          xcodebuild build -project "$XCODE_PROJECT" \
+          cd ios && xcodebuild build -project "$XCODE_PROJECT" \
           -scheme "$XCODE_SCHEME" \
           CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO          
     artifacts:
