--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -14,14 +14,14 @@ workflows:
       - name: Install CocoaPods dependencies
         script: |
           cd ios && pod install
-      - name: Run tests
-        script: |
-          cd ios && xcodebuild \
-          -project "$XCODE_PROJECT" \
-          -scheme "$XCODE_SCHEME" \
-          -sdk iphonesimulator \
-          -destination 'platform=iOS Simulator,name=iPhone 12,OS=14.5' \
-          clean build test CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO          
+#       - name: Run tests
+#         script: |
+#           cd ios && xcodebuild \
+#           -project "$XCODE_PROJECT" \
+#           -scheme "$XCODE_SCHEME" \
+#           -sdk iphonesimulator \
+#           -destination 'platform=iOS Simulator,name=iPhone 12,OS=14.5' \
+#           clean build test CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO          
       - name: Build debug app
         script: |
           cd ios && xcodebuild build -project "$XCODE_PROJECT" \
