--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -2,7 +2,7 @@ workflows:
   ios-project-debug: # workflow ID
     name: iOS debug # workflow name
     environment:
-      xcode: latest
+      xcode: 11.7
       cocoapods: default
       vars:
           XCODE_PROJECT: "xcell.xcodeproj" # <-- Put the name of your project here. 
